--- a/THANKS
+++ b/THANKS
@@ -1,5 +1,5 @@
 GNU SASL THANKS -- Acknowledgements.
-Copyright (C) 2002, 2003, 2004, 2005, 2006 Simon Josefsson
+Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007 Simon Josefsson
 See the end for copying conditions.
 
 GNU SASL uses libntlm by Grant Edwards maintained by Simon Josefsson;
@@ -27,6 +27,7 @@ Ryan Slack
 Yvan Bassuel
 Francis Brosnan Blazquez
 James Mansion
+Maxim Britov
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
