--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,8 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
+* Version 0.2.20 (unreleased)
+
 * Version 0.2.19 (released 2007-08-09)
 
 ** Command-line tools, examples, etc are now licensed under the
