Increment shared library version properly.

--- a/lib/NEWS
+++ b/lib/NEWS
@@ -4,6 +4,10 @@ See the end for copying conditions.
 
 * Version 0.2.20 (unreleased)
 
+** Correctly increment the shared library version.
+I forgot to increment it in the last release, to indicate that a new
+API/ABI was added.
+
 ** If GSS-API and GS2 are disabled, don't bother linking to a GSS-API library.
 Reported by Maxim Britov <maxim.britov@gmail.com>.
 
