--- a/THANKS
+++ b/THANKS
@@ -28,6 +28,7 @@ Yvan Bassuel
 Francis Brosnan Blazquez
 James Mansion
 Maxim Britov
+Brad Hards
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
