--- a/THANKS
+++ b/THANKS
@@ -29,6 +29,7 @@ Francis Brosnan Blazquez
 James Mansion
 Maxim Britov
 Brad Hards
+James Canete
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
