--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,9 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 0.2.21 (unreleased)
 
+** Fix typos in manual.
+Tiny patch from Brad Hards <bradh@frogmouth.net>.
+
 ** Update gnulib files.
 
 * Version 0.2.20 (released 2007-08-11)
