--- a/NEWS
+++ b/NEWS
@@ -6,9 +6,13 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
-* Version 0.2.21 (released 2007-08-22)
+* Version 0.2.22 (unreleased)
 
 ** Fix warnings when building the tool 'gsasl'.
+
+** Update gnulib files.
+
+* Version 0.2.21 (released 2007-08-22)
 
 ** Fix typos in manual.
 Tiny patch from Brad Hards <bradh@frogmouth.net>.
