--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,6 +2,13 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.
 Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007 Simon Josefsson
 See the end for copying conditions.
 
+* Version 0.2.22 (unreleased)
+
+** Update gnulib files.
+
+** API and ABI modifications.
+No changes since last version.
+
 * Version 0.2.21 (released 2007-08-22)
 
 ** DIGEST-MD5: Remove the extra leading, trailing, and intermediate commas.
