--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,9 @@ SASL.  That include the manual, the command line tool, and self tests.
 
 * Version 0.2.22 (unreleased)
 
+** Development git tree moved to savannah.
+See <https://savannah.gnu.org/projects/gsasl/>.
+
 ** Fix warnings when building the tool 'gsasl'.
 
 ** Update gnulib files.
