--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,8 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
+* Version 0.2.24 (unreleased)
+
 * Version 0.2.23 (released 2008-01-15)
 
 ** Improve CRAM-MD5 self-test to detect if challenges are the same.
