--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,7 @@ Note that changes to the GNU SASL Library is documented in lib/NEWS.
 This file track changes to the remaining, non-library, parts of GNU
 SASL.  That include the manual, the command line tool, and self tests.
 
-* Version 0.2.24 (unreleased)
+* Version 0.2.24 (released 2008-01-15)
 
 ** Link self-tests with gnulib, to fix link failures under MinGW.
 
