--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,11 +2,19 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.
 Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008 Simon Josefsson
 See the end for copying conditions.
 
+* Version 0.2.25 (unreleased)
+
+** API and ABI modifications.
+No changes since last version.
+
 * Version 0.2.24 (released 2008-01-15)
 
 ** When libgcrypt is used, disable secure memory to make things work.
 
 ** When built under MinGW, generate a libgsasl-XX.def using -Wl,--output-def.
+
+** API and ABI modifications.
+No changes since last version.
 
 * Version 0.2.23 (released 2008-01-15)
 
