--- a/lib/NEWS
+++ b/lib/NEWS
@@ -4,6 +4,8 @@ See the end for copying conditions.
 
 * Version 0.2.25 (unreleased)
 
+** Fix non-portable use of brace expansion in makefiles.
+
 ** API and ABI modifications.
 No changes since last version.
 
