--- a/THANKS
+++ b/THANKS
@@ -31,6 +31,7 @@ Maxim Britov
 Brad Hards
 James Canete
 Daniel Armyr
+Enrico Scholz
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
