--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,7 +2,7 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.
 Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008 Simon Josefsson
 See the end for copying conditions.
 
-* Version 0.2.25 (unreleased)
+* Version 0.2.25 (released 2008-03-10)
 
 ** Fix non-portable use of brace expansion in makefiles.
 
