Add native Windows build notes, based on libidn.

--- a/doc/gsasl.texi
+++ b/doc/gsasl.texi
@@ -544,6 +544,43 @@ result in a SASL library that is only compatible with RFC 2222.
 For the complete list, refer to the output from @code{configure
 --help}.
 
+@menu
+* Installing under Windows::    Windows specific build instructions.
+@end menu
+
+@node Installing under Windows
+@subsection Installing under Windows
+
+There are two ways to build GNU SASL on Windows: via MinGW or via
+Visual Studio C++.
+
+With MinGW, you can build a GNU SASL DLL and use it from other
+applications.  After installing MinGW (@url{http://mingw.org/}) follow
+the generic installation instructions (@pxref{Downloading and
+Installing}).  The DLL is installed by default.
+
+For information on how to use the DLL in other applications, see:
+@url{http://www.mingw.org/mingwfaq.shtml#faq-msvcdll}.
+
+You can build GNU SASL as a native Visual Studio C++ project.  This
+allows you to build the code for other platforms that VS supports,
+such as Windows Mobile.  You need Visual Studio 2005 or later.
+
+First download and unpack the archive as described in the generic
+installation instructions (@pxref{Downloading and Installing}).  Don't
+run @code{./configure}.  Instead, start Visual Studio and open the
+project file @file{lib/win32/libgsasl.sln} inside the GNU SASL
+directory.  You should be able to build the project using VS.
+
+Output libraries will be written into the @code{lib/win32/lib} (or
+@code{lib/win32/lib/debug} for Debug versions) folder.
+
+Warning!  Unless you build GNU SASL linked with libgcrypt, GNU SASL
+uses the Windows function @code{CryptGenRandom} for generating
+cryptographic random data.  The function is known to have some
+security weaknesses.  See @url{http://eprint.iacr.org/2007/419} for
+more information.
+
 @node Bug Reports
 @section Bug Reports
 @cindex Reporting Bugs
