Add, reporting the DIGEST-MD5 problem.

--- a/THANKS
+++ b/THANKS
@@ -32,6 +32,7 @@ Brad Hards
 James Canete
 Daniel Armyr
 Enrico Scholz
+Martin Rozee
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
