--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 GNU SASL AUTHORS -- Information about the authors.
-Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007 Simon Josefsson
+Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008 Simon Josefsson
 See the end for copying conditions.
 
 Simon Josefsson <simon@josefsson.org>
@@ -10,6 +10,9 @@ Implemented gsasl_client/server_suggest_mechanism.
 
 James Canete <jcanete01@shaw.ca>
 Fixed digest-md5 to not add excessive commas.
+
+Adam Strzelecki <ono@java.pl>
+Contributed Windows Visual Studio project files.
 
 -----BEGIN PGP PUBLIC KEY BLOCK-----
 URL: http://josefsson.org/key.txt
