Fix ISO-8859-1 to UTF-8 conversion code. Tiny patch from Pawel Widera <momat@man.poznan.pl>.

--- a/THANKS
+++ b/THANKS
@@ -33,6 +33,7 @@ James Canete
 Daniel Armyr
 Enrico Scholz
 Martin Rozee
+Pawel Widera
 
 ----------------------------------------------------------------------
 Copying and distribution of this file, with or without modification,
