--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,8 @@ SASL.  That include the manual, the command line tool, and self tests.
 This allows us to avoid use of --no-location which makes the
 translation teams happier.
 
+** Build fixes for the documentation.
+
 ** Update gnulib files.
 
 * Version 0.2.25 (released 2008-03-10)
