--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,8 @@ Report and tiny patch from Enrico Scholz
 <enrico.scholz@informatik.tu-chemnitz.de> in
 <http://thread.gmane.org/gmane.comp.gnu.gsasl.general/149>.
 
+** Update gnulib files, and include gnulib self-tests.
+
 * Version 0.2.26 (released 2008-05-05)
 
 ** Translations files not stored directly in git to avoid merge conflicts.
