--- a/lib/NEWS
+++ b/lib/NEWS
@@ -2,7 +2,7 @@ GNU SASL LIBRARY NEWS -- History of user-visible changes.
 Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008 Simon Josefsson
 See the end for copying conditions.
 
-* Version 0.2.27 (unreleased)
+* Version 0.2.27 (released 2008-07-01)
 
 ** DIGEST-MD5: Fix undefined symbol "utf8tolatin1ifpossible".
 This happened if --disable-server is used.  Reported by Martin Lambers
